<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <ImageView
            android:id="@+id/screenImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@string/screen"
            app:srcCompat="@drawable/ic_launcher_splash" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/startText"
                style="@style/translucent"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:text="@string/start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <TextView
                android:id="@+id/selectText"
                style="@style/translucent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/select"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.599"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <TextView
                android:id="@+id/aText"
                style="@style/translucent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/a"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.829" />

            <TextView
                android:id="@+id/bText"
                style="@style/translucent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/b"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.264"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.829" />

            <TextView
                android:id="@+id/upText"
                style="@style/translucent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.882"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <TextView
                android:id="@+id/rightText"
                style="@style/translucent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.955"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.662" />

            <TextView
                android:id="@+id/downText"
                style="@style/translucent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.882"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <TextView
                android:id="@+id/leftText"
                style="@style/translucent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.662" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>